Name:                cupduck
Version:             0.1
Synopsis:            What is Noon doing now?
Description:         This is a website that tells you what Noon is doing now, according to TaskWarrior.
License:             MIT
Author:              Noon Silk
Maintainer:          noonsilk+cupduck@gmail.com
Stability:           Stable
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable cupduck
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.11,
    snap-server               >= 0.9   && < 0.11,
    http-conduit              >= 2.0.0.0,
    transformers              >= 0.3.0.0    

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
